# Synergy

./: .gitignore  Cargo.toml  README.md
backend/: .gitignore  Cargo.toml  README.md
backend/.sqlx/: query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json
backend/migrations/: 20250410221407_user_table.sql  20250410221522_test_user.sql
backend/src/: db_models.rs  main.rs  routes.rs
frontend/: Cargo.toml  README.md
