[package]
name = "synergy_frontend"
description = "This binary app implements Synergy website frontend."
readme = "README.md"
repository = "https://github.com/JktuJQ/Synergy"

authors = ["JktuJQ <odmamontov@gmail.com>", "WonderWaffle4 <spamwwaff4@yandex.ru>"]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
